# DensitySurf

./: README.md  notes.txt
Docs/: Minimal_python_intro.docx  Using the Python package.docx  ~$ing the Python package.docx
densitysurf/: pyproject.toml
densitysurf/densitysurf/: __init__.py  densitysurf.py  extra_functions.py  file_structures.py  workflow.py
densitysurf/docs/: Example_analysis.R  stomics_example_analysis.ipynb
olddensitysurf_old/: pyproject_old.toml
olddensitysurf_old/densitysurf/: __init__.py  densitysurf.py
