[project]
name = "densitysurf"
version = "0.1.0"
description = ""
authors = [
    {name = "kristenfeher",email = "kristenmf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=1.22,<2.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "igraph (>=0.11.8,<0.12.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-network (>=0.33.1,<0.34.0)",
    "numba (>=0.61.0,<0.62.0)",
    "umap-learn (>=0.5.7,<0.6.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
